<resources>
    <string name="app_name">Agri10x</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout_b">Are you sure you want to logout?</string>
    <string name="update_downloaded">App Downloaded</string>
    <string name="restart">Restart</string>
    <string name="welcometoagri10x">Welcome to Agri10x</string>
    <string name="letscheck">Lets first check  that  we  deliver to your address</string>
    <string name="ChooseLocation">Choose Location</string>
    <string name="chooseyourloc">Choose your Location and start shopping</string>
    <string name="USECURRENTLOCATION">USE CURRENT LOCATION</string>
    <string name="SelectitMannually">Select it Mannually</string>
    <string name="Login">Login</string>
    <string name="sendotp">send otp</string>
    <string name="OR">OR </string>
    <string name="TradeAmount">Trade Amount</string>
    <string name="CONVENIENCE">CONVENIENCE CHARGES @ 2%</string>
    <string name="charges_title">Charges Details</string>
    <string name="COMMISION">COMMISION @ 1%</string>
    <string name="HANDLING">HANDLING FEES @ 2% </string>
    <string name="facility">Choose Facility</string>
    <string name="noo">No</string>
    <string name="your_payment_suusesful">Your Payment is successful</string>
    <string name="mesage_of_success">Would you like to opt for Warehouse/Transport facility ?</string>
    <string name="DonthaveanAccountYet">Dont have an Account Yet? </string>
    <string name="clickheretoclickone"> Create One </string>
    <string name="Opps">Opps! </string>
    <string name="OrderFailed">Order Failed! </string>
    <string name="Somethingwentterriblywrong">Something went terribly wrong  </string>
    <string name="Please_try_again">Please try again </string>
    <string name="back_to_home">back to home </string>
    <string name="verify_OTP">Verify OTP</string>
    <string name="Add_Money">Add Money</string>
    <string name="Account_Title">Account Title</string>
    <string name="ICOGNITIVE">ICOGNITIVE GLOBAL PRIVATE LIMITED NODAL AC</string>
    <string name="Beneficiary_Account_Number">Beneficiary Account Number</string>
    <string name="IFSC">IFSC</string>
    <string name="YESB0CMSNOC">YESB0CMSNOC (5th alphabet is zero)</string>
    <string name="Bank_Name">Bank Name</string>
    <string name="Yes_Bank">Yes Bank</string>
    <string name="Register">Register</string>
    <string name="Register_As">Register As</string>
    <string name="send_otp">send otp</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="click_here_to_LOGIN">click here to LOGIN</string>
    <string name="Create_Account">Create Account</string>
    <string name="Email_Id">Email Id</string>
    <string name="Address">Address</string>
    <string name="Address1">Address1</string>
    <string name="Address2">Address2</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="Country">Country</string>
    <string name="SAVE">SAVE</string>
    <string name="RemovingCommodity">Removing Commodity...</string>
    <string name="Pleasewait">Please wait...</string>
    <string name="ResendingOTP">Resending OTP...</string>
    <string name="VerifyingOTP">Verifying OTP...</string>
    <string name="Logout">Logout</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Add_Address">Add Address</string>
    <string name="Trade_Now">Trade Now</string>
    <string name="kg">KG</string>
    <string name="myaddress">My Addresses</string>
    <string name="mylanguage">My Language</string>
    <string name="add_money_to_wallet">Add money to wallet</string>
    <string name="Discription">Description</string>
    <string name="My_Addresses">My Addresses</string>
    <string name="add"> + Add </string>
    <string name="Booking">Booking </string>
    <string name="Add_new_Address">+ Add new Address </string>
    <string name="Trade_Value">Trade Value</string>
    <string name="Total_Trade_Amount">Total Trade Amount</string>
    <string name="order_book">order book</string>
    <string name="PURCHASE">PURCHASE</string>
    <string name="Menu">Menu</string>
    <string name="Manage_Stock">Manage Stock</string>
    <string name="Add_Stock"> + Add Stock </string>
    <string name="E_Collect">E-Collect</string>
    <string name="E_Collect_detail">Please find below the E-Collect Details. You can transfer the payment amount using your netbanking.</string>
    <string name="paymentnote">In case you have already made the payment using E-Collect,please click the button below while we confirm the payment.Please note that the payment can take upto 30 mins to reflect.</string>
    <string name="I_have_made_paymeny">I HAVE MADE THE PAYMENT</string>
    <string name="Categories">Categories</string>
    <string name="User_Details">User Details</string>
    <string name="Delivery_Payments">Delivery/Payments</string>
    <string name="Featured_Trades">Featured Trades</string>
    <string name="Live_Trades">Live Trades</string>
    <string name="Negotiable_Trades">Negotiable Trades</string>
    <string name="Wishlist">Wishlist</string>
    <string name="Paid_Amount">Paid Amount</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="Billing_Address">Billing Address</string>
    <string name="Shipping_address">Shipping Address</string>
    <string name="Delivery_Notes">Delivery Notes</string>
    <string name="Delete">Delete</string>
    <string name="quote_your_price">quote your price</string>
    <string name="Type_of_transport">Type of transport</string>
    <string name="Weight_of_transport">Weight of transport</string>
    <string name="price_kg">Price/KG</string>
    <string name="Operating_State">Operating State</string>
    <string name="No_Selection">No Selection</string>
    <string name="Stock_Type">Stock Type</string>
    <string name="viewall">See All</string>
    <string name="top_picks">Top Picks</string>
    <string name="catogery_list">Catogery List</string>
    <string name="register_as">Register As</string>
    <string name="i_am_famr">I am a Farmer</string>
    <string name="i_am_trader">I am a Trader</string>
    <string name="i_am_fpo">I am a FPO</string>
    <string name="i_am_worker">I am a Worker</string>
    <string name="iwanttosell">I WANT TO SELL</string>
    <string name="iwanttobut">I WANT TO BUY</string>
    <string name="iwanttowork">I WANT TO WORK</string>
    <string name="comdity_rate">Commodity Rates</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="tollfree">1800-121-2243</string>
    <string name="facetouble">Facing trouble?</string>
    <string name="callus">Call Us</string>
    <string name="entrnamef">Enter First Name</string>
    <string name="enternamel">Enter Last Name</string>
    <string name="farmer">Farmer</string>
    <string name="trder">Trader</string>
    <string name="featured_tader">Featured Trades</string>
    <string name="our_hero">Our Heroes</string>
    <string name="live_trade">Live Trade</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="tradevalue">Trade Value</string>
    <string name="menu">Menu</string>
    <string name="offer">Offer</string>
    <string name="vegitabl">Vegitables</string>
    <string name="spixce">Spices</string>
    <string name="furits">Fruits</string>
    <string name="vegpulesr">Pulses</string>
    <string name="gaisins">Grains</string>
    <string name="contact_us">Contact Us</string>
    <string name="wehole_garins">Wholesome &amp;</string>
    <string name="premimu_garins">primium garins</string>
    <string name="name">Name</string>
    <string name="phon_numbr">Phone Number</string>
    <string name="email">Email</string>
    <string name="commodity">Commodity</string>
    <string name="varity">Variety</string>
    <string name="price_per_kg">Price per KG</string>
    <string name="submit">SUBMIT</string>
    <string name="fname_str"> First Name *</string>
    <string name="lname_str"> Last Name *</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="ddmmyy">dd-mm-yyyy</string>
    <string name="cart_txt">*Minimum Order Quantity is 2500 KG and multiple of 50 KG only</string>
    <string name="enter_digit">Enter 10 Digit Mobile Number *</string>
    <string name="chcekout">CHECKOUT</string>
    <string name="total_amout">Total Trade Amount</string>
    <string name="txttt_amount">XXXXXX</string>
    <string name="qunty">Quantity</string>
    <string name="priceperkg">Price/KG</string>
    <string name="total_weight">  Total Weight (KG)</string>
    <string name="Mobile_number">"Your Mobile Number"</string>
    <string name="verify_account">"Verify Account"</string>
    <string name="we_will_send">"We will send an SMS With a Confirmation code to this number"</string>
    <string name="verification">"Please enter verification code send to +91XXXXXXXXXX"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_order">Book Order</string>
    <string name="purches">Purchase</string>
    <string name="booking">Booking</string>
    <string name="billing_Address">Billing Address *</string>
    <string name="add_new_address">+ Add new address</string>
    <string name="deivery_address">Delivery Address *</string>
    <string name="booking_ammount">Booking Amount *</string>
    <string name="booking_amt">Booking Amount</string>
    <string name="paytext">* Pay 75% and avail 5% discount</string>
    <string name="delivery_notes">Delivery Notes</string>
    <string name="please_deleiver_it_before">Delivery notes if any</string>
    <string name="packaging_deatils">Packaging details if any</string>
    <string name="please_deliver_goods">Goods are packed as mentioned</string>
    <string name="packaging_details">Packaging Details</string>
    <string name="trade_total_value">Trade Value Total</string>
    <string name="trade_amount">Trade Amount</string>
    <string name="convi_charge">CONVENIENCE CHARGES @2%</string>
    <string name="heading_fee">HANDLING FEES @ 2%</string>
    <string name="commision">COMMISION @ 1%</string>
    <string name="total_tade_amount">Total Trade Amount</string>
    <string name="menu_payment">Payments</string>
    <string name="menu_addstock">Add Stock</string>
    <string name="menu_managestock">Manage Stock</string>
    <string name="menu_your_orders">My Orders</string>
    <string name="menu_wish_list">My Wishlist</string>
    <string name="menu_refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contst_us">Contact Us</string>
    <string name="menu_share_app">Share App</string>
    <string name="tv_version_1_0_0">Version 1.0.0</string>
    <string name="tv_profile">Profile</string>
    <string name="menu_verified_account">Verify Account</string>
    <string name="total_tarade_amount">Total Trade Amount</string>
    <string name="next_btn">Next</string>
    <string name="upto_onelak">* Upto 1 lakh INR</string>
    <string name="morethenone">* More than 1 lakh</string>
    <string name="yes">Yes</string>
    <string name="marathi">मराठी</string>
    <string name="english">English</string>
    <string name="set_lang">Continue in English</string>
    <string name="chooseYourLang">Choose your preferred language</string>
</resources>