<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="top"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView

            android:layout_width="match_parent"
            android:text="@string/welcometoagri10x"
            android:layout_marginTop="50dp"
            android:layout_gravity="top"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/text_color"
            android:text="@string/letscheck"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/location"
            android:layout_marginTop="30dp"
            android:layout_height="180dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/ChooseLocation"/>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_color"
            android:layout_marginHorizontal="30dp"
            android:text="@string/chooseyourloc"/>

        <Button
            android:id="@+id/loction_btn"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:text="@string/USECURRENTLOCATION"
            android:drawableLeft="@drawable/currentlocation"
            android:background="@drawable/btn_round"
            android:layout_height="wrap_content">
        </Button>


        <TextView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/appgreen"
            android:text="@string/SelectitMannually"
            android:layout_height="wrap_content">

        </TextView>



    </LinearLayout>






</LinearLayout>