<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.MyLanguageFragment"
    >


    <RelativeLayout
        android:id="@+id/toolbarlang_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp">

        <ImageView

            android:id="@+id/but_back_my_lang"
            app:tint="@color/black"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/but_back_my_lang"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/but_back_my_lang"
            android:text="@string/mylanguage"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/toolbarlang_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        >

        <TextView
            android:id="@+id/text_choose_language_id"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/but_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/but_back"
            android:text="@string/chooseYourLang"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/proxima_nova_alt_light"
            android:layout_marginBottom="8dp"
            />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:orientation="vertical"
            >

            <RadioButton
                android:fontFamily="@font/proxima_nova_alt_light"
                android:id="@+id/radio_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/black"
                android:checked="true"
                />

            <RadioButton
                android:fontFamily="@font/proxima_nova_alt_light"

                android:id="@+id/radio_marathi"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/marathi"
                android:textColor="@color/black"
                />


        </RadioGroup>

        <Button
            android:text="@string/set_lang"
            android:id="@+id/btnSelectLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>