<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Update_Profile_Activity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:src="@drawable/close"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:text="@string/fname"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_firstname"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/proxima_nova_alt_condensed_bold"
                    android:hint="abc"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lname"/>
                <EditText
                    android:id="@+id/et_lastname"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/proxima_nova_alt_condensed_bold"
                    android:hint="abc"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email_Id"/>
                <EditText
                    android:id="@+id/et_email"
                    android:fontFamily="@font/proxima_nova_alt_condensed_bold"
                    android:hint="xxx@gmail.com"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phon_numbr"/>
                <EditText
                    android:id="@+id/et_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:fontFamily="@font/proxima_nova_alt_condensed_bold"
                    android:hint="7218******"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Address"/>
                <EditText
                    android:id="@+id/et_address"
                    android:fontFamily="@font/proxima_nova_alt_condensed_bold"
                    android:hint="abc"
                    android:inputType="textPostalAddress"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Address1"/>
                <EditText
                    android:id="@+id/et_addtess1"
                    android:inputType="textPostalAddress"
                    android:fontFamily="@font/proxima_nova_alt_condensed_bold"
                    android:hint="abc"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView

                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Address2"/>
                <EditText
                    android:id="@+id/et_address2"
                    android:inputType="textPostalAddress"
                    android:fontFamily="@font/proxima_nova_alt_condensed_bold"
                    android:hint="abc"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="29dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:text="string/City"
                    android:textSize="14sp" />
                <EditText
                    android:id="@+id/et_city"
                    android:fontFamily="@font/proxima_nova_alt_condensed_bold"
                    android:hint="Pune"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/State"/>
                <EditText
                    android:id="@+id/et_state"
                    android:fontFamily="@font/proxima_nova_alt_condensed_bold"
                    android:hint="abc"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Country"/>
                <EditText
                    android:id="@+id/et_country"
                    android:fontFamily="@font/proxima_nova_alt_condensed_bold"
                    android:hint="India"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SAVE"
                android:padding="10dp"
                android:background="@drawable/btn_round"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>