<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/proxima_nova_alt_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/your_payment_suusesful"
            android:layout_weight="1.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </TextView>
        <ImageView
            android:layout_marginRight="5dp"
            android:layout_weight="0.2"
            android:id="@+id/cancle_btn"
            android:layout_width="0dp"
            android:src="@drawable/close"
            android:layout_marginTop="20dp"
            android:layout_height="20dp">

        </ImageView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:fontFamily="@font/proximanova_regular"
            android:text="@string/mesage_of_success"
            android:layout_height="wrap_content">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/btn_round"
                android:text="@string/yes"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="15dp"></Button>

            <Button
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/btn_round"
                android:text="@string/noo"
                android:textColor="@color/white"
                android:textSize="15dp"></Button>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>